--- a/apps/bolt-site--storefront/templates/site.scss
+++ b/apps/bolt-site--storefront/templates/site.scss
@@ -67,12 +67,12 @@ $storefront-sidebar-width: 320px;
   }
 
   &.scrolled {
-    box-shadow: 0 0 10px var(--bolt-theme-background);
+    box-shadow: 0 0 10px #000;
 
     .c-bolt-headline {
       opacity: 1;
       @media (max-width: 1000px) {
-        box-shadow: 0 0 10px var(--bolt-theme-background);
+        box-shadow: 0 0 10px #000;
       }
     }
   }
@@ -192,6 +192,11 @@ $storefront-sidebar-width: 320px;
 .storefront-docs-content {
   padding: 0 0 0 0;
   transition: margin .4s;
+
+  > bolt-band:first-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
 
   .storefront-docs__content--has-sidebar & {
     @include respond-to(medium) {
