Tweaking home copy

--- a/apps/bolt-site/templates/home.twig
+++ b/apps/bolt-site/templates/home.twig
@@ -180,7 +180,7 @@
               size: "large"
             }
           ],
-            content: "The design system has been tried and tested, it’s scalable to all devices, and strives to be AAA compliant with Web Content Accessibility Guidelines.",
+            content: "The design system has been tried and tested and it’s scalable to all devices.",
             buttons: [
             {
               text: "Visit the component docs",
