migrate card updates

--- a/packages/components/bolt-card/src/card.twig
+++ b/packages/components/bolt-card/src/card.twig
@@ -81,22 +81,6 @@
 
 
 
-{% set cardMedia %}
-  {% for key, item in _items if item.pattern in _allowedCardHeaderItems %}
-    {% if item.pattern %}
-      {% if item.pattern == 'image' and url is not empty %}
-        <a href="{{url}}">
-      {% endif %}
-      {% include pattern_template(item.pattern) with item only %}
-      {% if item.pattern == 'image' and url is not empty %}
-        </a>
-      {% endif %}
-    {% else %}
-      {{ item }}
-    {% endif %}
-  {% endfor %}
-{% endset %}
-
 <bolt-card
   theme="{{ theme }}"
   {% if url %}url={{ url }}{% endif %}
@@ -106,7 +90,20 @@
     {% if block('card_media') is not empty %}
       <div class="{{ "#{baseClass}__media" }}">{% spaceless %}
         {% block card_media %}
-          {{ cardMedia }}
+          {% for key, item in _items if item.pattern in _allowedCardHeaderItems or key in _allowedCardHeaderItems %}
+            {% if item.pattern %}
+              {% if item.pattern == 'image' and url is not empty %}
+                <a href="{{url}}">
+              {% endif %}
+              {% include pattern_template(item.pattern) with item only %}
+              {% if item.pattern == 'image' and url is not empty %}
+                </a>
+              {% endif %}
+            {% else %}
+              {{ item }}
+            {% endif %}
+
+          {% endfor %}
         {% endblock %}
       {% endspaceless %}</div>
     {% endif %}
@@ -137,32 +134,13 @@
             {% set paramOverrides = {
               itemAlignment: "left",
               style: "text",
+              icon: {
+                name: "chevron-right"
+              }
             } %}
-
-            {% if item.icon == null %}
-              {% if item.external == true %}
-                {% set iconOverrides = {
-                  icon: {
-                    name: "external-link"
-                  }
-                } %}
-              {% else %}
-                {% set iconOverrides = {
-                  icon: {
-                    name: "chevron-right"
-                  }
-                } %}
-              {% endif %}
-            {% endif %}
-
              <div class="{{ "#{baseClass}__footer-item" }}">
               {% if item.pattern %}
                 {% set item = item | merge(paramOverrides) %}
-
-                {# if icon default data set, merge that in as well #}
-                {% if iconOverrides %}
-                  {% set item = item | merge(iconOverrides) %}
-                {% endif %}
                 {% include pattern_template(item.pattern) with item only %}
               {% else %}
                 {{ item }}
