Fixing PL image paths

--- a/apps/pattern-lab/src/_patterns/02-components/backgrounds/00-background-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/backgrounds/00-background-docs.twig
@@ -10,7 +10,7 @@
     contentItems: [
       {
         pattern: "image",
-        src: "/images/content/backgrounds/background-tall-4.jpg"
+        src: "../../images/content/backgrounds/background-tall-4.jpg"
       }
     ]
 } only %}
