--- a/apps/pattern-lab/src/_patterns/02-components/backgrounds/15-background-focal-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/backgrounds/15-background-focal-variations.twig
@@ -13,7 +13,7 @@
       contentItems: [
         {
           pattern: "image",
-          src: "/images/content/backgrounds/background-tall-4.jpg",
+          src: "../../images/content/backgrounds/background-tall-4.jpg",
           lazyload: false
         }
       ]
