--- a/apps/pattern-lab/src/_patterns/02-components/backgrounds/25-background-fill-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/backgrounds/25-background-fill-variations.twig
@@ -10,7 +10,7 @@
     contentItems: [
       {
         pattern: "image",
-        src: "/images/content/backgrounds/background-tall-2.jpg",
+        src: "../../images/content/backgrounds/background-tall-2.jpg",
         lazyload: false
       }
     ]
@@ -29,7 +29,7 @@
     contentItems: [
       {
         pattern: "image",
-        src: "/images/content/backgrounds/background-tall-2.jpg",
+        src: "../../images/content/backgrounds/background-tall-2.jpg",
         lazyload: false
       }
     ]
