--- a/apps/pattern-lab/src/_patterns/02-components/band/30-band-collection-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/band/30-band-collection-variation.twig
@@ -63,7 +63,7 @@
     {
       pattern: "teaser",
       logo: {
-        src: "/images/content/logos/logo-paypal.svg",
+        src: "../../images/content/logos/logo-paypal.svg",
         lazyload: false,
       },
       eyebrow: {
