--- a/apps/pattern-lab/src/_patterns/02-components/band/40-band-video-background-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/band/40-band-video-background-variation.twig
@@ -11,7 +11,7 @@
     contentItems: [
       {
         pattern: "image",
-        src: "/images/content/backgrounds/background-short-1.jpg",
+        src: "../../images/content/backgrounds/background-short-1.jpg",
         lazyload: false
       },
       {
