--- a/apps/pattern-lab/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
@@ -5,7 +5,7 @@
   orientation: "portrait",
   color: "white",
   image: {
-    src: "/images/sample/product-device-screenshot--phone.jpg"
+    src: "../../images/sample/product-device-screenshot--phone.jpg"
   }
 } only %}
 {% endverbatim %}
