--- a/apps/pattern-lab/src/_patterns/02-components/device-viewer/05-device-viewer.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/device-viewer/05-device-viewer.twig
@@ -3,7 +3,7 @@
   orientation: "portrait",
   color: "silver",
   image: {
-    src: "/images/content/screenshots/device-screenshot--phone.jpg",
+    src: "../../images/content/screenshots/device-screenshot--phone.jpg",
     lazyload: false
   }
 } only %}
