--- a/apps/pattern-lab/src/_patterns/02-components/device-viewer/15-device-viewer-iphone8-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/device-viewer/15-device-viewer-iphone8-variation.twig
@@ -7,7 +7,7 @@
     orientation: "portrait",
     color: color,
     image: {
-      src: "/images/content/screenshots/device-screenshot--phone.jpg",
+      src: "../../images/content/screenshots/device-screenshot--phone.jpg",
       lazyload: false
     }
   } %}
@@ -18,7 +18,7 @@
     orientation: "landscape",
     color: color,
     image: {
-      src: "/images/content/screenshots/device-screenshot--tablet.jpg",
+      src: "../../images/content/screenshots/device-screenshot--tablet.jpg",
       lazyload: false
     }
   } %}
@@ -31,7 +31,7 @@
   orientation: "portrait",
   color: "silver",
   image: {
-    src: "/images/content/screenshots/device-screenshot--phone.jpg",
+    src: "../../images/content/screenshots/device-screenshot--phone.jpg",
     lazyload: false
   },
   magnify: true
@@ -43,7 +43,7 @@
   orientation: "landscape",
   color: "black",
   image: {
-    src: "/images/content/screenshots/device-screenshot--tablet.jpg",
+    src: "../../images/content/screenshots/device-screenshot--tablet.jpg",
     lazyload: false
   },
   magnify: true
