--- a/apps/pattern-lab/src/_patterns/02-components/image/10-image-size-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/10-image-size-variations.twig
@@ -7,7 +7,7 @@
 <h3>Size: 100%</h3>
 {% include '@bolt-components-image/image.twig' with {
   lazyload: false,
-  src: "/images/placeholders/tout-4x3-climber.jpg",
+  src: "../../images/placeholders/tout-4x3-climber.jpg",
   alt: "A Rock Climber",
   imageAttributes: classes,
 } only %}
