--- a/apps/pattern-lab/src/_patterns/04-page-examples/30-product-pages/product-t2-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-page-examples/30-product-pages/product-t2-page.twig
@@ -20,7 +20,7 @@
       },
       contentItems: [{
         pattern: "image",
-        src: "/images/content/backgrounds/background-tall-3.jpg",
+        src: "../../images/content/backgrounds/background-tall-3.jpg",
         lazyload: false
       }]
     },
@@ -230,7 +230,7 @@
           orientation: "landscape",
           color: "black",
           image: {
-            src: "/images/content/screenshots/device-screenshot--tablet.jpg",
+            src: "../../images/content/screenshots/device-screenshot--tablet.jpg",
             lazyload: false
           }
         } only %}
@@ -260,7 +260,7 @@
           orientation: "portrait",
           color: "black",
           image: {
-            src: "/images/content/screenshots/device-screenshot--tablet-portrait.jpg",
+            src: "../../images/content/screenshots/device-screenshot--tablet-portrait.jpg",
             lazyload: false
           }
         } only %}
@@ -342,7 +342,7 @@
           orientation: "portrait",
           color: "black",
           image: {
-            src: "/images/content/screenshots/device-screenshot--phone.jpg",
+            src: "../../images/content/screenshots/device-screenshot--phone.jpg",
             lazyload: false
           }
         } only %}
@@ -398,7 +398,7 @@
           orientation: "landscape",
           color: "black",
           image: {
-            src: "/images/content/screenshots/device-screenshot--desktop.jpg",
+            src: "../../images/content/screenshots/device-screenshot--desktop.jpg",
             lazyload: false
           }
         } only %}
@@ -416,7 +416,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -424,7 +424,7 @@
           text: "Article"
         },
         "logo": {
-          src: "/images/content/logos/logo-paypal.svg",
+          src: "../../images/content/logos/logo-paypal.svg",
           "lazyload": false
         },
         "headlines": [
@@ -448,7 +448,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -476,7 +476,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -560,7 +560,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/content/backgrounds/background-tall-4.jpg",
+        "src": "../../images/content/backgrounds/background-tall-4.jpg",
         "lazyload": false
       }
     ]
@@ -578,13 +578,13 @@
           border: "horizontal",
           alignItems: "center",
           logo: {
-            src: "/images/content/logos/logo-paypal.svg",
+            src: "../../images/content/logos/logo-paypal.svg",
             invert: true,
             lazyload: false
           },
           author: {
             image: {
-              src: "/images/placeholders/500x500.jpg",
+              src: "../../images/placeholders/500x500.jpg",
               lazyload: false
             },
             name: "Jessica Cuthbertson",
