--- a/apps/pattern-lab/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
@@ -84,7 +84,7 @@
         }
       ],
       logo: {
-        src: "/images/content/logos/logo-paypal.svg",
+        src: "../../images/content/logos/logo-paypal.svg",
         invert: true,
         lazyload: false
       },
@@ -168,7 +168,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/content/backgrounds/background-tall-1.jpg",
+        "src": "../../images/content/backgrounds/background-tall-1.jpg",
         "lazyload": false
       }
     ]
@@ -180,7 +180,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/placeholders/1200x660.jpg",
+          "src": "../../images/placeholders/1200x660.jpg",
           "lazyload": false
         },
         {
@@ -204,7 +204,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -240,7 +240,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/content/promos/promo-16x9-ai.jpg",
+          "src": "../../images/content/promos/promo-16x9-ai.jpg",
           "lazyload": false
         },
         {
@@ -291,7 +291,7 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "/images/content/promos/promo-16x9-salesforce-vs-pega.png",
+            src: "../../images/content/promos/promo-16x9-salesforce-vs-pega.png",
             lazyload: false
           } only %}
         {% endcell %}
