--- a/apps/pattern-lab/src/_patterns/02-components/backgrounds/10-background-opacity-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/backgrounds/10-background-opacity-variations.twig
@@ -12,7 +12,7 @@
     contentItems: [
       {
         pattern: "image",
-        src: "/images/content/backgrounds/background-tall-2.jpg",
+        src: "../../images/content/backgrounds/background-tall-2.jpg",
         lazyload: false
       }
     ]
