--- a/apps/pattern-lab/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/blockquote/10-blockquote-alignItems-variation.twig
@@ -6,12 +6,12 @@
     alignItems: alignItems,
     logo: {
       invert: "true",
-      src: "/images/content/logos/logo-paypal.svg"
+      src: "../../images/content/logos/logo-paypal.svg"
     },
     content: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
     author: {
       image: {
-        src: "/images/placeholders/500x500.jpg",
+        src: "../../images/placeholders/500x500.jpg",
         lazyload: false
       },
       name: "Michelangelo di Lodovico Buonarroti Simoni",
