--- a/apps/pattern-lab/src/_patterns/02-components/card/05-card.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/05-card.twig
@@ -3,7 +3,7 @@
   contentItems: [
     {
       pattern: "image",
-      src: "/images/placeholders/landscape-16x9-mountains.jpg",
+      src: "../../images/placeholders/landscape-16x9-mountains.jpg",
       imageAttributes: create_attribute(imageAttributes | default({})).addClass("u-bolt-width-1/1"),
       lazyload: false,
       alt: "Anthem Video"
