--- a/apps/pattern-lab/src/_patterns/02-components/figure/05-figure.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/figure/05-figure.twig
@@ -1,6 +1,6 @@
 {% include "@bolt-components-figure/figure.twig" with {
   image: {
-    src: "/images/placeholders/500x500.jpg",
+    src: "../../images/placeholders/500x500.jpg",
     lazyload: false
   },
   caption: "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>"
