--- a/apps/pattern-lab/src/_patterns/04-page-examples/10-homepage/01-homepage-w-background-video.twig
+++ b/apps/pattern-lab/src/_patterns/04-page-examples/10-homepage/01-homepage-w-background-video.twig
@@ -89,7 +89,7 @@
         }
       ],
       logo: {
-        src: "/images/content/logos/logo-paypal.svg",
+        src: "../../images/content/logos/logo-paypal.svg",
         invert: true,
         lazyload: false
       },
@@ -164,7 +164,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/content/backgrounds/background-tall-4.jpg",
+        "src": "../../images/content/backgrounds/background-tall-4.jpg",
         "lazyload": false
       },
       {
@@ -207,7 +207,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/placeholders/1200x660.jpg",
+          "src": "../../images/placeholders/1200x660.jpg",
           "lazyload": false
         },
         {
@@ -231,7 +231,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -267,7 +267,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/content/promos/promo-16x9-ai.jpg",
+          "src": "../../images/content/promos/promo-16x9-ai.jpg",
           "lazyload": false
         },
         {
@@ -318,7 +318,7 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "/images/content/promos/promo-16x9-salesforce-vs-pega.png",
+            src: "../../images/content/promos/promo-16x9-salesforce-vs-pega.png",
             lazyload: false
           } only %}
         {% endcell %}
@@ -366,7 +366,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/content/backgrounds/background-tall-4.jpg",
+        "src": "../../images/content/backgrounds/background-tall-4.jpg",
         "lazyload": false
       },
       {
