--- a/apps/pattern-lab/src/_patterns/04-page-examples/30-product-pages/product-landing-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-page-examples/30-product-pages/product-landing-page.twig
@@ -210,7 +210,7 @@
 
       {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
         {% include "@bolt/image.twig" with {
-          src: "/images/content/charts/decision-hub-chart.png",
+          src: "../../images/content/charts/decision-hub-chart.png",
           lazyload: false
         } only %}
       {% endcell %}
@@ -252,7 +252,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -260,7 +260,7 @@
           text: "Article"
         },
         "logo": {
-          src: "/images/content/logos/logo-paypal.svg",
+          src: "../../images/content/logos/logo-paypal.svg",
           lazyload: false
         },
         "headlines": [
@@ -284,7 +284,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -312,7 +312,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "src": "../../images/content/promos/promo-16x9-anthem.jpg",
         "lazyload": false
       },
       "teaser": {
@@ -396,7 +396,7 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/content/backgrounds/background-tall-4.jpg",
+        "src": "../../images/content/backgrounds/background-tall-4.jpg",
         "lazyload": false
       }
     ]
@@ -414,13 +414,13 @@
           border: "horizontal",
           alignItems: "center",
           logo: {
-            src: "/images/content/logos/logo-paypal.svg",
+            src: "../../images/content/logos/logo-paypal.svg",
             invert: true,
             lazyload: false
           },
           author: {
             image: {
-              src: "/images/placeholders/500x500.jpg",
+              src: "../../images/placeholders/500x500.jpg",
               lazyload: false
             },
             name: "Jessica Cuthbertson",
