chore: misc cleanup for v1.0 release; updating styleguide patterns to use grid + wrapper object; hiding a bunch of patterns from the main PL styleguide page, renaming top level PL categories, minor CSS updates to styleguidekit all page; adding improved clean task to wipe empty folders + extra dependency dirs not getting wiped with current task

--- a/apps/pattern-lab/src/_patterns/01-styleguide/color-palette/_color-swatch.twig
+++ b/apps/pattern-lab/src/_patterns/01-styleguide/color-palette/_color-swatch.twig
@@ -1,11 +1,19 @@
 {% set colorName = color_swatch.colorName %}
 {% set palette = color_swatch.palette %}
 
-<div class="o-bolt-grid__cell u-bolt-width-1/1 u-bolt-width-1/2@small u-bolt-width-1/3@medium u-bolt-width-1/4@large">
+{% cell with {
+  attributes: {
+    class: [
+      "u-bolt-width-1/1",
+      "u-bolt-width-1/2@small",
+      "u-bolt-width-1/3@medium",
+      "u-bolt-width-1/4@large"
+    ]
+  }
+} %}
 
   <bolt-swatch class="c-bolt-swatch">
-    <!-- <div class="c-bolt-swatch__inner"> -->
-      {% for tone, colorValue in palette %}
+    {% for tone, colorValue in palette %}
 
       {% if tone == "initial" or tone == "default" or tone == "base" %}
         {% set isLargeColor = "c-bolt-swatch__color--large" %}
@@ -45,6 +53,6 @@
 
         </bolt-swatch-color>
       {% endfor %}
-    <!-- </div> -->
   </bolt-swatch>
-</div>
+
+{% endcell %}
