--- a/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-01-homepage-w-background-video.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-01-homepage-w-background-video.twig
@@ -1,7 +1,7 @@
 {% extends "@bolt/default-template.twig" %}
 
 {% block global_header %}
-  {% include "@bolt/page-header.twig" %}
+  {% include "@bolt/_page-header.twig" %}
 {% endblock %}
 
 {% block main_content %}
