--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -1,6 +1,6 @@
 // PL only styles
 @import "@bolt/core";
-@import "../_patterns/01-visual-styles/color-palette/_color-swatch";
+@import "../_patterns/01-styleguide/color-palette/_color-swatch";
 @import "*.scss";
 @import '../_patterns/04-page-examples/50-pega-world/**/*.scss';
 
@@ -11,6 +11,36 @@ bolt-demo {
 
 .sg-main {
   @include bolt-padding(medium);
+}
+
+// Remove double padding in PL when top level wrapper exists
+.sg-pattern-example > bolt-wrapper > .o-bolt-wrapper {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.sg-pattern-head.sg-pattern-head {
+  @include bolt-padding(medium, squished);
+  background-color: bolt-color(white);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  margin-bottom: 0;
+  margin-left: -1 * bolt-spacing(medium);
+  margin-right: -1 * bolt-spacing(medium);
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.12);
+}
+
+.sg-pattern-extra.sg-pattern-extra.sg-pattern-extra {
+  @include bolt-margin-top(medium);
+  border-top: 0;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.sg-pattern-extra.sg-pattern-extra {
+  max-height: 0px; // prevent background from showing up
 }
 
 ul.bolt-icon-list-demo {
