--- a/packages/components/bolt-video/src/_videojs-enhancements.scss
+++ b/packages/components/bolt-video/src/_videojs-enhancements.scss
@@ -14,7 +14,7 @@
 }
 
 .video-js .vjs-big-play-button.vjs-big-play-button {
-  @include bolt-button-secondary;
+  @include bolt-button-style(secondary);
   margin-top: auto;
   margin-left: auto;
   width: 4.5rem;
